src/components/tutorial/game-tutorial/GameTutorial.scss
@import "./../../../styles/variables";

@keyframes up-arrow {
  0% {
    transform: scaleX(-1) rotate(270deg) translateX(0);
    opacity: 1;
  }

  100% {
    transform: scaleX(-1) rotate(270deg) translateX(-0.4em);
    opacity: 0.5;
  }
}

@keyframes down-arrow {
  0% {
    transform: rotate(90deg) translateX(0);
    opacity: 0.5;
  }

  100% {
    transform: rotate(90deg) translateX(0.4em);
    opacity: 1;
  }
}

@keyframes right-arrow {
  0% {
    transform: translateX(0);
    opacity: 1;
  }

  100% {
    transform: translateX(-0.4em);
    opacity: 0.5;
  }
}

@keyframes left-arrow {
  0% {
    transform: scaleX(-1) translateX(0);
    opacity: 0.5;
  }

  100% {
    transform: scaleX(-1) translateX(0.4em);
    opacity: 1;
  }
}

.tutorial {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 0;
  padding: 76px 15px 45px 55px;
  display: grid;
  grid-template-columns: minmax(auto, 1470px);
  justify-content: center;
  overflow: hidden;
  pointer-events: none;

  &__game {
    position: relative;
  }

  &__overlay {
    position: absolute;
    box-shadow: 0 0 0 100dvw $color-overlay;
    pointer-events: none;

    &--article,
    &--values {
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      width: $newspaper-width;
      box-shadow: 0 0 0 100dvw $color-overlay;
      pointer-events: none;
    }

    &--misprint,
    &--error {
      position: absolute;
      top: calc(50% + 38px);
      right: 4px;
      bottom: calc(50% - 186px);
      width: 363px;
      box-shadow: 0 0 0 100dvw $color-overlay;
      pointer-events: none;
    }

    &--instructions {
      position: absolute;
      top: 0;
      right: 743px;
      bottom: calc(50% + 8px);
      left: 0;
      box-shadow: 0 0 0 100dvw $color-overlay;
      pointer-events: none;

      @media screen and (max-height: 864px) {
        bottom: calc(55% + 10px);
      }
    }

    &--property {
      position: absolute;
      top: 60px;
      right: 743px;
      left: 0;
      height: 65px;
      box-shadow: 0 0 0 100dvw $color-overlay;
      pointer-events: none;
    }

    &--correct {
      position: absolute;
      top: calc(50% - 200px);
      right: 362px;
      bottom: calc(50% - 230px);
      width: 365px;
      box-shadow: 0 0 0 100dvw $color-overlay;
      pointer-events: none;
    }

    &--code {
      position: absolute;
      top: calc(50% + 8px);
      right: 743px;
      bottom: 0;
      left: 0;
      box-shadow: 0 0 0 100dvw $color-overlay;
      pointer-events: none;

      @media screen and (max-height: 864px) {
        top: calc(45% + 8px);
        bottom: 1px;
      }
    }

    &--write {
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      box-shadow: 0 0 0 100dvw $color-overlay;
      pointer-events: none;

      &::before {
        content: '';
        position: absolute;
        top: 0;
        right: 727px;
        left: 0;
        bottom: calc(50% - 54px);
        background: $color-overlay;

        @media only screen and (max-height: 864px) {
          bottom: calc(55% - 54px);
        }
      }

      &::after {
        content: '';
        position: absolute;
        top: calc(50% + 88px);
        right: 727px;
        bottom: 0;
        left: 0;
        background: $color-overlay;

        @media only screen and (max-height: 864px) {
          top: calc(45% + 88px);
        }
      }

    }

    &--complete {
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      box-shadow: 0 0 0 100dvw $color-overlay;
      pointer-events: none;

      &::before {
        content: '';
        position: absolute;
        top: 0;
        right: 727px;
        left: 0;
        bottom: calc(50% - 8px);
        background: $color-overlay;

        @media screen and (max-height: 864px) {
          bottom: calc(55% - 6px);
        }
      }

      &::after {
        content: '';
        position: absolute;
        top: calc(50% + 160px);
        right: 727px;
        bottom: 0;
        left: 0;
        background: $color-overlay;
      }

    }

    &--menu {
      position: absolute;
      top: calc(50% - 185px);
      right: 362px;
      bottom: calc(50% - 230px);
      width: 365px;
      box-shadow: 0 0 0 100dvw $color-overlay;
      pointer-events: none;
    }

    &--menu,
    &--levels,
    &--buttons,
    &--done {
      position: absolute;
      top: -17px;
      left: -55px;
      bottom: -15px;
      width: 40px;
      box-shadow: 0 0 0 100dvw $color-overlay;
      pointer-events: none;

      @media screen and (min-width: 1540px) {
        left: calc(714px - 50vw);
      }
    }

    &-spot {
      display: none;
    }

  }

  &__spot {
    &-write {
      background: $color-overlay;
      display: block;
      position: absolute;
      bottom: calc(50% - 88px);
      height: 34px;
      width: 23px;
      right: 727px;

      @media only screen and (max-height: 864px) {
        bottom: calc(55% - 88px);
      }
    }

    &-complete {
      background: $color-overlay;
      display: block;
      position: absolute;
      bottom: calc(50% - 160px);
      height: 152px;
      width: 17px;
      right: 727px;

      @media only screen and (max-height: 864px) {
        bottom: calc(55% - 194px);
        height: 188px;
      }
    }
  }

  &__info {
    position: absolute;
    width: 300px;
    background: $color-grey-300;
    z-index: 100;
    padding: 10px 10px 5px 10px;
    font: 18px/27px $font-Crimson;
    border: 1px solid $color-black;
    box-shadow: -6px -6px $color-orange-400;

    &--article,
    &--values,
    &--correct {
      top: calc(50% - 51px);
      right: calc($newspaper-width + 50px);
    }

    &--misprint {
      top: calc(50% - 86px);
      right: 50px;
    }

    &--instructions {
      top: calc(25% - 48px);
      right: 387px;
    }

    &--property {
      top: 50px;
      right: 387px;
    }

    &--error {
      top: calc(50% - 115px);
      right: 50px;
    }

    &--code {
      top: calc(50% - 167px);
      right: calc(50% + 220px);

      @media screen and (max-height: 864px) {
        top: calc(45% - 174px);
      }
    }

    &--write {
      top: calc(50% - 99px);
      right: calc(50% + 220px);

      @media screen and (max-height: 864px) {
        top: calc(45% - 101px);
      }
    }

    &--complete {
      top: calc(50% + 216px);
      right: 752px;
    }

    &--menu {
      top: -25px;
      left: 40px;

      @media screen and (min-width: 1540px) {
        left: calc(810px - 50vw);
      }
    }

    &--levels {
      top: 50%;
      left: 320px;

      @media screen and (min-width: 1540px) {
        left: calc(1090px - 50vw);
      }
    }

    &--buttons {
      bottom: -35px;
      left: 320px;

      @media screen and (min-width: 1540px) {
        left: calc(1090px - 50vw);
      }
    }

    &--done {
      top: calc(50% - 62px);
      right: calc(50% - 165px);
    }


  }

  &__arrow {
    width: 35px;
    position: absolute;
    filter: $filter-yellow;

    &--article,
    &--values,
    &--correct {
      top: calc(50% - 14px);
      right: -47px;
      animation: right-arrow 0.6s infinite alternate ease-in-out;
    }

    &--misprint {
      top: calc(50% + 41px);
      right: 50%;
      animation: down-arrow 0.6s infinite alternate ease-in-out;
    }

    &--instructions {
      top: calc(50% - 22px);
      left: -47px;
      animation: left-arrow 0.6s infinite alternate ease-in-out;
    }

    &--property {
      top: calc(50% - 22px);
      left: -47px;
      animation: left-arrow 0.6s infinite alternate ease-in-out;
    }

    &--error {
      top: calc(50% + 56px);
      right: 50%;
      animation: down-arrow 0.6s infinite alternate ease-in-out;
    }

    &--code {
      top: calc(50% + 70px);
      right: 50%;
      animation: down-arrow 0.6s infinite alternate ease-in-out;
    }

    &--write {
      top: calc(50% + 57px);
      right: 50%;
      animation: down-arrow 0.6s infinite alternate ease-in-out;
    }

    &--complete {
      top: -53px;
      right: 60px;
      animation: up-arrow 0.6s infinite alternate ease-in-out;
    }

    &--menu {
      top: calc(50% - 22px);
      left: -46px;
      animation: left-arrow 0.6s infinite alternate ease-in-out;
    }

    &--levels {
      top: calc(50% - 22px);
      left: -46px;
      animation: left-arrow 0.6s infinite alternate ease-in-out;
    }

    &--buttons {
      top: 50%;
      left: -46px;
      animation: left-arrow 0.6s infinite alternate ease-in-out;
    }

    &--done {
      display: none;
    }
  }

  &__text {
    margin: 0;
    text-align: justify;
  }

  &__btns {
    margin-top: 10px;
    display: flex;
    justify-content: space-between;

    &--next {
      flex-direction: column;
      align-items: flex-end;
    }
  }

  &__button {
    border: none;
    background: none;
    cursor: pointer;
    font: normal normal 900 16px/21px $font-Playfair;
    pointer-events: all;
    padding: 0;

    &:hover {
      filter: $filter-orange;
    }
  }

  &__double-arrow {
    width: 20px;
    margin-right: 3px;

    &--reverse {
      rotate: 180deg;
    }
  }

  &__skip {
    position: absolute;
    bottom: 8px;
    right: 8px;
    font: normal normal 900 14px/21px $font-Playfair;
    background: none;
    cursor: pointer;
    pointer-events: all;
    color: $color-grey-400;
    border: none;

    &:hover {
      filter: $filter-orange-from-white;
    }
  }
}

